Implement H2 database integration with user management features and refactor related classes and added login screen